<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"


    >

    <ImageView
        android:id="@+id/imgchitiet"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txtchitiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:end="@+id/imgsach"
        android:text="@string/t_n"
        android:textSize="24sp"
        android:padding="10dp"
        android:textStyle="bold" />

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_c_gi"
        android:id="@+id/txttacgia"
        android:end="@+id/imgsach"/>

    <TextView
        android:id="@+id/txtchitietgia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:end="@+id/imgsach"
        android:padding="10dp"
        android:text="@string/gi"
        android:textColor="@color/gia"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:text="@string/m_s_ch"
        android:id="@+id/txtchitietma"
        android:padding="10dp"
        android:end="@+id/imgsach"/>
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lo_i"
        android:padding="10dp"
        android:id="@+id/txtchitietloai"
        android:end="@+id/imgsach"/>

    <Button
        android:id="@+id/fabthem"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/th_m"
        android:textStyle="bold" />
</LinearLayout>